# AI-Driven-Pharma

./: .gitignore  0_🏠_Home.py  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
aipharma/: utils.py
aipharma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pages/: 1_🔍️_BioMedio_QA.py  2_🔖_BioMedical_NER.py  3_🎯_Document_Summary.py
requirements/: requirements-dev.txt  requirements.txt
